_scss/_retreat.scss
@import "flexbox";
@import "vars";

.retreat {

    font-size: 24px;

    overflow: hidden;

    h1 {
        font-size: 3em;
        margin-bottom: 16px;
    }

    h1,h2 {
        color: $red;
    }
    h2 {
        font-size: 1.5em;
        text-align: center;
        margin-bottom: 1em;
        margin-top: 2em
    }
    h3 {
        text-align: center;
        font-size: 1em;
    }
    .small-text {
        margin: 0.3em 0 0.5em 0;
        font-size: 18px;
        line-height: 1.5em;
    }
    .big-text {
        margin-bottom: 0.5em;
        font-size: 1em;
        line-height: 1.5em;
    }
    .centered-text {
        text-align: center;
    }
    .right-align {
        text-align: right;
    }
    img {
        max-width: 768px;
        height: auto;
    }
    .background-img {
        box-shadow: 12px 12px $ligth-blue;
    }
    .retreate-page-section {
        margin: auto 25%;
        margin-bottom: 40px;
    }

    @include mobile() {
        overflow: hidden;

        h1 {
            font-size: 40px;
            margin-bottom: 16px;
        }

        .big-p {
            font-size: 20px;
        }

        .small-p {
            font-size: 16px;
        }

        .retreate-page-section {
            margin: auto 24px;
            margin-bottom: 40px;
        }
    }
}

.page-heading {
    height: 100vh;
    margin-bottom: 0 !important;
    @include flexbox();
    @include flex-direction(row);
    @include align-items(center);

    .heading-text {
        margin: 0 24px;
        @include flexbox();
        @include flex-direction(column);
        @include justify-content(flex-end);
        @include align-items(flex-end);

        @include mobile() {
            margin-left: 0;
        }
    }

    .heading-img {

        img {
            animation: fadein 2s ease;
        }
    }

    @include small-screen() {
        margin: 0 15% 0 15% !important;
    }
}

#sponsors {

    h2 {
        margin: 0 !important;
    }

    #sponsor-container {
        @include flexbox();
        @include flex-direction(row);
        justify-content: space-evenly;
        align-items: center;

        img, #new-sponsor {
            padding: 16px 0;
            width: 200px;
            height: auto;
        }

        #new-sponsor {
            text-align: center;
        }

        @include mobile() {
            @include flex-direction(column);

            a {
                margin: 16px 0;
            }
        }

        @include small-screen() {
            @include flex-wrap(wrap);

            a {
                margin: 16px;
            }
        }
    }
}

.img-gallery {

    @include flexbox();
    @include flex-direction(row);
    @include justify-content(center);
    margin-bottom: 40px;
    // @include flex-wrap(wrap);

    a {
        margin: 0 24px;
    }

    & :nth-child(2) {
        margin-top: 40px;
    }

    img {
        max-width: 448px;
        height: auto;
    }

    @include mobile() {
        @include flex-direction(column);
        margin: 0 24px 40px 24px;

        a {
            margin: 0 auto 0 0;
        }

        & :nth-child(2) {
            margin: 24px 0 24px auto;
        }

        img {
            width: 100%;
        }
    }
}

#program {
    margin-left: 0 !important;
    margin-right: 0 !important;

    #program-container {

        @include flexbox();
        @include flex-direction(row);
        @include flex-wrap(wrap);
        @include justify-content(space-evenly);

        h3 {
            color: white;
            background-color: $red;
            padding: 16px 0;
            //border-radius: 13px 13px 0 0;
        }

        .day-container {
            width: 400px;
            height: auto;
            box-shadow: 12px 12px #42E7DA;
            border: 4px solid $red;
            //border-radius: 13px;

            text-align: center;
            &, &>div{
                @include flexbox();
                @include flex-dir(column);

            }

            .day-moment {
                font-size: 20px;
                padding: 15px 0 12px 0;
                border-top: 1px solid darken($color: white, $amount: 15);
                border-bottom: 1px solid darken($color: white, $amount: 15);
                background: #e8424e36;
            }

            ul {
                padding: 0;
                margin: 0;

                li {
                    text-align: left;
                    padding: 8px 16px;
                    list-style: none;
                    border-bottom: 1px solid darken($color: white, $amount: 15);
                }

                li:last-child{
                    border-bottom: 0;
                }
            }


        }

        @include mobile() {
            @include flex-direction(column);
            padding: 0 24px 0 24px;

            .day-container {
                width: 100%;
            }
        }
    }
}

#cost {

    @include flexbox();
    @include flex-direction(column);
    @include align-items(center);

    li {
        margin-top: 8px;
        // padding-left: 16px;
        // list-style: none;
    }

    .cost-explanation-container {
       @include flexbox();
    }

    .cost-explanation {
        margin: 0 8px 16px 8px;

        .big-text {
            position: relative;
            &:after {
                content: "";
                position: absolute;
                z-index: -1;
                bottom: 2px;
                left: 10px;
                width: calc(100% - 2em);
                height: 20px;
                background: $ligth-blue;
            }
        }

        @include small-screen() {
            margin: 0;
        }
    }

    @include small-screen() {
        .cost-explanation-container {
            display: block;
        }
    }

    a {
        text-decoration: none;
    }

    #ticket-card-container {
        @include flexbox();
        @include flex-dir(row);
        @include justify-content(space-evenly);

        .ticket-card {
            margin: 16px;
            padding: 24px;
            border: 4px solid $red;
            background: white;
            min-width: 256px;
            min-height: 256px;
            box-shadow: 12px 12px $ligth-blue;

            @include flexbox();
            @include flex-dir(column);
            @include align-items(center);

            h3 {
                font-size: 36px;
                margin-bottom: 16px;
            }

            .price {

                margin-top: auto;
                @include flexbox();
                @include flex-dir(column);
                @include align-items(center);

                p {
                    margin: 0;
                    font-size: 60px;
                    color: $red;
                }

                del {
                    font-size: 24px;
                    color: lighten($color: $red, $amount: 20);
                }
            }
        }

        @include mobile() {
            @include flex-direction(column);
        }
    }
}

#faq {
    .faq-container {
        margin: 1em 0;
    }
}

#contacts {

    .contacts-container {
        @include flexbox();
        @include flex-direction(row);
        @include justify-content(space-evenly);

        @include mobile() {
            @include flex-wrap(wrap);
            @include align-items(center);
        }
    }

    .contact {
        padding: 16px;
        margin: 16px;
        width: 120px;
        height: 120px;
        border: 4px solid transparent;

        @include flexbox();
        @include flex-direction(column);
        @include justify-content(center);
        @include align-items(center);

        img {
            width: auto;
            height: 60px;
        }

        p {
            margin-top: 24px;
            margin-bottom: 0;
        }

        &:hover {
            border: 4px solid $red;
            animation: border 0.5s cubic-bezier(0.47, 0, 0.745, 0.715);
        }

        @include small-screen() {
            width: 96px;
            height: 96px;
            margin: 8px;
        }
    }
}

@keyframes border {
    from {border: 4px solid transparent;}
    to {border: 4px solid $red;}
}

@keyframes fadein {
    from {
        opacity: 0;
        box-shadow: 0px 0px #42E7DA;
    }
    to   {
        opacity: 1;
        box-shadow: 12px 12px #42E7DA;
    }
}

